<resources>
    <string name="app_name">Nonce</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_free_bars" translatable="false">FreeBars</string>
    <string name="title_activity_social_bars" translatable="false">SocialBars</string>
    <string name="action_share">Share</string>
    <string name="action_list">Nonce it</string>
    <string name="evolves">Evolves Together</string>
    <string name="gardenRadio">http://radio.garden/live/</string>
    <string name="allGenres">All Genres</string>
    <string name="actionMovies">Action </string>
    <string name="adventureMovies">Adventure </string>
    <string name="animationMovies">Animation </string>
    <string name="biographyMovies">Biography </string>
    <string name="comedyMovies">Comedy </string>
    <string name="crimeMovies">Crime </string>
    <string name="dramaMovies">Drama </string>
    <string name="horrorMovies">Horror </string>
    <string name="mysteryMovies">Mystery </string>
    <string name="romanceMovies">Romance </string>
    <string name="scifiMovies">SCI-FI </string>
    <string name="warMovies">War </string>
    <string name="facebook_app_id" translatable="false">187061241782696</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb187061241782696</string>
    <string name="tone_level">Normal</string>
    <string-array name="tone_level_entries">
        <item>Extremely High</item>
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
        <item>Lowest</item>
    </string-array>
    <string-array name="tone_level_values">
        <item>Extremely High</item>
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
        <item>Lowest</item>
    </string-array>
    <string name="English_lang" translatable="false">English</string>
    <string name="EvolvesTogether">Evolves Together</string>
    <string name="call_someone">Call Someone</string>
    <string name="hangout">Hangout</string>
    <string name="tweet">Tweet</string>
    <string name="free_time">Free Time</string>
    <string name="make_event">Memo</string>
    <string name="travel">Travel</string>
    <string name="send_sms">Send SMS</string>
    <string name="eventname">eventName</string>
    <string name="datefordetailsactivity">dateForDetailsActivity</string>
    <string name="saveDetails">save</string>
    <string name="dateforadapter">dateForAdapter</string>
    <string name="am_pmForAdapter">AM/PM</string>
    <string name="timeforadapter">timeForAdapter</string>
    <string name="alarmnameforadapter">alarmNameForAdapter</string>
    <string name="timeforshowtime">TimeForShowTime</string>
    <string name="dateforshowtime">DateForShowTime</string>
    <string name="dismiss">Dismiss</string>
    <string name="Snooze">Snooze</string>
    <string name="timeToCall">"Time to Call "</string>
    <string name="call">Call</string>
    <string name="timeToBeIn">"Time to be in "</string>
    <string name="enjoy">" ... Enjoy"</string>
    <string name="openMap">Open Map</string>
    <string name="timeToGo">"Time to go "</string>
    <string name="WishYouAgoodTravel">Nonce wish you a good travel to</string>
    <string name="timeToWatchMovie">Time to Watch Movie</string>
    <string name="contacts">Contacts</string>
    <string name="reason_of_calling">Reason of Calling</string>
    <string name="daily_notifications_for_suggest_movies">Daily Notifications For suggest Movies</string>
    <string name="choose_your_favourite_genre">Choose your favourite genre</string>
    <string name="check_genres">Check Genres</string>
    <string name="movie_time">Movie Time</string>
    <string name="_09_09_pm">09:09 PM</string>
    <string name="music_time">Music Time</string>
    <string name="http_radio_garden_live">http://radio.garden/live/</string>
    <string name="online_music">Online Music</string>
    <string name="daily_notifications_for_music_link">Daily Notifications For Music Link</string>
    <string name="type_a_message">type a message</string>
    <string name="sms">SMS</string>
    <string name="send">Send</string>
    <string name="sendSMSManually">Send sms to manually </string>
    <string name="noSmsPermission">because of sms permission is not active</string>
    <string name="next">next</string>
    <string name="tickets">Tickets</string>
    <string name="hanging_hours">Hanging hours</string>
    <string name="hang_destination">Your destination</string>
    <string name="hang_details">Details</string>
    <string name="hang_city">Which city</string>
    <string name="what_will_happen">What will happen ?</string>
    <string name="_0">0</string>
    <string name="for_how_long">For how long</string>
    <string name="purpose_of_travel">Details</string>
    <string name="whichCity">Which City</string>
    <string name="which_country">Where will you travel ?</string>
    <string name="share_your_travel">Share your Travel</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="let_friends_connecting_you_with">Let Friends connecting you with</string>
    <string name="bbm">BBM</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="keep_it_private">keep it private</string>
    <string name="share_it">Share it</string>
    <string name="share_your_hangout">Share your Hangout</string>
    <string name="share_the_app_link">Share The App Link</string>
    <string name="aboutUsLetters">This version of Nonce app is an experimental , just update it from time to time and connect us on facebook , twitter or by email if you have an idea you want to add , if we found it a great one and useful for all users we will add it in the next update , thank you for being one of nonce users , Enjoy it</string>
    <string name="privateUser">Private</string>
    <string name="sound">sound</string>
    <string name="contact_us">Contact us</string>
    <string name="options">Options</string>
    <string name="about_version">About version</string>
    <string name="nonce_movies">Nonce Movies</string>
    <string name="search">Search</string>
    <string name="snooze_for_random_minutes">Snooze for random minutes</string>
    <string name="memo">"Memo"</string>
    <string name="view_memo">View</string>
    <string name="title">Title</string>
    <string name="memo_1">Memo 1</string>
    <string name="memo_2">Memo 2</string>
    <string name="memo_3">Memo 3</string>
    <string name="hold">Hold</string>
    <string name="mem6">memo 6</string>
    <string name="memo_5">memo 5</string>
    <string name="memo_4">memo 4</string>
    <string name="to">to</string>
    <string name="let_s_login_with_facebook">Let\'s Login With Facebook</string>
    <string name="what_s_on_your_mind">What\'s on your mind ?</string>
    <string name="let_s_login_with_twitter">Let\'s Login With Twitter</string>
    <string name="pleaseLongClick">Please , Long Click</string>
    <string name="theNumberOnTheBoard">\'s number on the board</string>
    <string name="contactSaved">Contacts saved</string>
    <string name="movies">Movies</string>
    <string name="musicOnline">Online Music</string>
    <string name="selectTime">Select Time</string>
    <string name="emptyFieldForLink">Empty link field means that Nonce will put the default Link</string>
    <string name="emptyFiledForTime">Empty time field  means that Nonce will put the last Time saved</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="chooseGenres">Choose Genre</string>
    <string name="action">" Action"</string>
    <string name="saved">Saved</string>
    <string name="timeToWatch">"Time to watch "</string>
    <string name="nonceSuggestToWatch">"Nonce Suggest to Watch "</string>
    <string name="radio">" Radio"</string>
    <string name="installMapApp">Please install a maps application</string>
    <string name="youHaveToBe">"You have to be in "</string>
    <string name="byNow">" by now"</string>
    <string name="YourBBMCode">Your BBM code</string>
    <string name="ok">Ok</string>
    <string name="emptyField">Field Empty</string>
    <string name="cancel">Cancel</string>
    <string name="yourWhatsAppNumber">Your WhatsApp Number</string>
    <string name="selectWhereWillYouShare">Select where will you share</string>
    <string name="yourDetailsWasSaved">"Your hangout details was saved "</string>
    <string name="youCanNotEditDetailsFromHere">You can not edit details from here</string>
    <string name="memoOnHold">Nonce Memo on Hold</string>
    <string name="maxMemos">Max Memos</string>
    <string name="notifications">Notification</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="discardSMS">Discard SMS</string>
    <string name="numberOnTheBoard">\'s number on the board</string>
    <string name="smsDelivered">SMS Delivered</string>
    <string name="smsSent">SMS sent</string>
    <string name="smsFailed">SMS failed</string>
    <string name="shareVia">Share via</string>
    <string name="welome">"Welcome "</string>
    <string name="discardTweet">Discard tweet</string>
    <string name="discardPost">Discard Post</string>
    <string name="updateStatus">Update Status</string>
    <string name="tweetSent">"Tweet sent Successfully "</string>
    <string name="tweetFaild">"Tweet failed to sent "</string>
    <string name="postSucces">Facebook post Successfully</string>
    <string name="postFailed">Facebook post failed to sent</string>
    <string name="doNotMissYourTravel">"Do not miss Your Travel to "</string>
    <string name="itIsNotUpcomingDay">It is not upcoming Time</string>
    <string name="remindInDailyList">Remind in Daily list</string>
    <string name="deleteOrEdit">"Edit Or Delete "</string>
    <string name="editTime">Edit Time</string>
    <string name="delete">"Delete "</string>
    <string name="pressBackAgainToExit">Press back again to exit Nonce</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="yourMemoOnBoard">Your memo on the board</string>
    <string name="donNotMissYourMemo">"Do not miss your Memo "</string>
    <string name="yourMemoOnTheHold">Your Memo on the Hold</string>
    <string name="shareFacebookSucces">Share Facebook Success</string>
    <string name="shareFacebookFailed">Share Facebook Failed</string>
    <string name="shareTwitterSucces">Share Twitter Success</string>
    <string name="shareTwitterFailed">Share Twitter Failed</string>
    <string name="email">Email</string>
    <string name="enableSound">Enable Sound</string>
    <string name="toneVolume">Tone Volume</string>
    <string name="alarmRingtone">Alarm Ringtone</string>
    <string name="notificationTone">Notifications</string>
    <string name="vibration">Vibrate</string>
    <string name="extremlyHigh">Extremely High</string>
    <string name="High">High</string>
    <string name="normal">Normal</string>
    <string name="low">Low</string>
    <string name="extremlyLow">Extremely Low</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="april">Apr</string>
    <string name="march">Mar</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="feb">Feb</string>
    <string name="jan">Jan</string>
    <string name="today">Today</string>
    <string name="Action">Action</string>
    <string name="Adventure">Adventure</string>
    <string name="Animation">Animation</string>
    <string name="Crime">Crime</string>
</resources>