<?xml version="1.0" encoding="utf-8"?>
<android.support.design.internal.ForegroundLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/white"
    tools:context=".settings.SettingActivity">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/privateUser"
            android:gravity="center|start"
            android:drawableLeft="@mipmap/private_user"
            android:id="@+id/private_user"
            android:drawableStart="@mipmap/private_user"
            android:background="?android:attr/selectableItemBackground"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/sound"
            android:gravity="center|start"
            android:id="@+id/sounds"
            android:drawableStart="@mipmap/notifications"
            android:drawableLeft="@mipmap/notifications"
            android:background="?android:attr/selectableItemBackground"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/options"
            android:gravity="center|start"
            android:id="@+id/app_settings"
            android:drawableLeft="@mipmap/settings_2"
            android:drawableStart="@mipmap/settings_2"
            android:background="?android:attr/selectableItemBackground"
            android:visibility="gone"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/contact_us"
            android:gravity="center|start"
            android:id="@+id/contactUs"
            android:drawableStart="@mipmap/mail"
            android:drawableLeft="@mipmap/mail"
            android:background="?android:attr/selectableItemBackground"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/about_version"
            android:gravity="center|start"
            android:id="@+id/aboutVersion"
            android:drawableLeft="@mipmap/about"
            android:drawableStart="@mipmap/about"
            android:background="?android:attr/selectableItemBackground"/>
</android.support.design.internal.ForegroundLinearLayout>
