<android.support.design.internal.ForegroundLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="2.5"
    android:background="@color/white"
    tools:context=".free_time.FreeTimeBars$MoviesFragment">

    <android.support.design.internal.ForegroundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/daily_notifications_for_suggest_movies"
            android:gravity="center"
            android:id="@+id/switchMovies"
            android:clickable="true"/>
    </android.support.design.internal.ForegroundLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_custome"/>
    <android.support.design.internal.ForegroundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:text="@string/choose_your_favourite_genre" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:id="@+id/genresButtonSelected"
            android:background="@drawable/button_custom"
            android:text="@string/check_genres"
            android:selectAllOnFocus="true"
            android:enabled="false"
            android:drawableRight="@mipmap/expand"
            android:drawableEnd="@mipmap/expand"/>
    </android.support.design.internal.ForegroundLinearLayout>

    <android.support.design.internal.ForegroundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_custom">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/timeForMovies"
                android:inputType="textAutoComplete"
                android:background="@color/white"
                android:hint="@string/movie_time"
                android:textColorHint="@color/darkness"
                android:text="@string/_09_09_pm"
                android:imeOptions="actionNone"
                android:selectAllOnFocus="true"
                android:cursorVisible="true"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>
    </android.support.design.internal.ForegroundLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_custome"/>

</android.support.design.internal.ForegroundLinearLayout>
