<?xml version="1.0" encoding="utf-8"?>
<android.support.design.internal.ForegroundLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:weightSum="2.5"
    android:gravity="center">

    <android.support.design.internal.ForegroundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">
        <Switch
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/daily_notifications_for_music_link"
            android:gravity="center"
            android:id="@+id/switchMusic"
            android:clickable="true"/>
    </android.support.design.internal.ForegroundLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_custome"/>
    <android.support.design.internal.ForegroundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_custom">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioLinkForMusic"
                android:inputType="textAutoComplete"
                android:background="@color/white"
                android:hint="@string/online_music"
                android:imeOptions="actionNext"
                android:text="@string/http_radio_garden_live"
                android:selectAllOnFocus="true"
                android:cursorVisible="true"
                android:enabled="false" />
        </android.support.design.widget.TextInputLayout>
    </android.support.design.internal.ForegroundLinearLayout>

    <android.support.design.internal.ForegroundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_custom">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/timeForMusic"
                android:inputType="textAutoComplete"
                android:background="@color/white"
                android:hint="@string/music_time"
                android:text="@string/_09_09_pm"
                android:imeOptions="actionNone"
                android:selectAllOnFocus="true"
                android:cursorVisible="true"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>
    </android.support.design.internal.ForegroundLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line_custome"/>
</android.support.design.internal.ForegroundLinearLayout>