<?xml version="1.0" encoding="utf-8"?>
<android.support.design.internal.ForegroundLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:weightSum="4"
    android:orientation="vertical"
    tools:context="twitter.nonce_app.make_memo.MakeMemo">


    <android.support.design.internal.ForegroundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/pin"
            android:id="@+id/pinMemory"
            />

        <android.support.design.widget.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_weight=".75"
            android:gravity="center"
            android:id="@+id/memTitle"
            android:inputType="textAutoComplete"
            android:cursorVisible="true"
            android:imeOptions="actionNext"/>
    </android.support.design.internal.ForegroundLinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:visibility="invisible"
                android:id="@+id/memoOneLayout"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/memo_1"
                    android:id="@+id/memoOne"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:cursorVisible="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:visibility="invisible"
                android:id="@+id/memoTwoLayout">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/memo_2"
                    android:id="@+id/memoTwo"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:cursorVisible="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:visibility="invisible"
                android:id="@+id/memoThreeLayout">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/memo_3"
                    android:id="@+id/memoThree"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:cursorVisible="true"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:visibility="invisible"
                android:id="@+id/memoFourLayout">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/memo_4"
                    android:id="@+id/memoFour"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:cursorVisible="true"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:visibility="invisible"
                android:id="@+id/memoFiveLayout">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/memo_5"
                    android:id="@+id/memoFive"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:cursorVisible="true"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:visibility="gone"
                android:id="@+id/memoSixLayout">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mem6"
                    android:id="@+id/memoSix"
                    android:imeOptions="actionDone"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>


    <android.support.design.internal.ForegroundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveDetails"
            android:background="@drawable/gone_grey"
            android:id="@+id/saveMemos"/>

    </android.support.design.internal.ForegroundLinearLayout>


</android.support.design.internal.ForegroundLinearLayout>
